# y2firstProject

./: database.db  database.py  main.py  models.py  pyproject.toml  requirements.txt
static/css/: style.css
templates/: about_us.html  add_product.html  buying_item.html  home.html  shop.html
